--- a/indradia.ipynb
+++ b/indradia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLSuH2eOtebatpvRS6J5XP",
+      "authorship_tag": "ABX9TyNwCb5GduTCzkklI90ry+PP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +128,13 @@
       "source": [
         "import requests\n",
         "import pandas as pd\n",
-        "import pandas_ta as ta\n",
+        "#import pandas_ta as ta\n",
+        "from ta.momentum import RSIIndicator, ROCIndicator\n",
+        "from ta.trend import MACD\n",
+        "from ta.volatility import AverageTrueRange, BollingerBands\n",
+        "# import pandas_ta as pta  # Uncomment if you want to use pandas_ta in the future\n",
+        "\n",
+        "\n",
         "import yfinance as yf\n",
         "from datetime import datetime, timedelta\n",
         "import os\n"
@@ -247,11 +253,14 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
         "# --- Cálculo de indicadores ---\n",
         "def calcular_features(df):\n",
         "    for col in ['open', 'high', 'low', 'close', 'volume']:\n",
         "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
         "\n",
+        "    # Price/volume features\n",
         "    df['gap_apertura_pct'] = (df['open'] - df['close'].shift(1)) / df['close'].shift(1) * 100\n",
         "    df['volatilidad_diaria'] = (df['high'] - df['low']) / df['low'] * 100\n",
         "    df['vol_5d'] = df['volatilidad_diaria'].rolling(5).std()\n",
@@ -262,22 +271,36 @@
         "    df['range_pct'] = (df['high'] - df['low']) / df['low'] * 100\n",
         "    df['volume_change_pct'] = (df['volume'] - df['volume'].shift(1)) / df['volume'].shift(1) * 100\n",
         "\n",
-        "    df['rsi_14'] = ta.rsi(df['close'], length=14)\n",
-        "    macd = ta.macd(df['close'])\n",
-        "    if macd is not None:\n",
-        "        df['macd'] = macd['MACD_12_26_9']\n",
-        "        df['macd_signal'] = macd['MACDs_12_26_9']\n",
-        "        df['macd_diff'] = df['macd'] - df['macd_signal']\n",
-        "    df['atr_14'] = ta.atr(df['high'], df['low'], df['close'], length=14)\n",
-        "    df['momentum_12'] = ta.mom(df['close'], length=12)\n",
+        "    # TA indicators using `ta` library\n",
+        "    df['rsi_14'] = RSIIndicator(close=df['close'], window=14).rsi()\n",
+        "    # df['rsi_14'] = pta.rsi(df['close'], length=14)  # pandas_ta version\n",
         "\n",
-        "    try:\n",
-        "        bb = ta.bbands(df['close'], length=20, std=2)\n",
-        "        df['bb_upper'] = bb['BBU_20_2.0_2.0']\n",
-        "        df['bb_lower'] = bb['BBL_20_2.0_2.0']\n",
-        "        df['bb_pctb']  = bb['BBP_20_2.0_2.0']\n",
-        "    except:\n",
-        "        df['bb_upper'] = df['bb_lower'] = df['bb_pctb'] = float('nan')\n",
+        "    macd = MACD(close=df['close'], window_slow=26, window_fast=12, window_sign=9)\n",
+        "    df['macd'] = macd.macd()\n",
+        "    df['macd_signal'] = macd.macd_signal()\n",
+        "    df['macd_diff'] = macd.macd_diff()\n",
+        "    # macd = pta.macd(df['close'])\n",
+        "    # df['macd'] = macd['MACD_12_26_9']\n",
+        "    # df['macd_signal'] = macd['MACDs_12_26_9']\n",
+        "    # df['macd_diff'] = df['macd'] - df['macd_signal']\n",
+        "\n",
+        "    df['atr_14'] = AverageTrueRange(high=df['high'], low=df['low'], close=df['close'], window=14).average_true_range()\n",
+        "    # df['atr_14'] = pta.atr(df['high'], df['low'], df['close'], length=14)\n",
+        "\n",
+        "    df['momentum_12'] = ROCIndicator(close=df['close'], window=12).roc()\n",
+        "    # df['momentum_12'] = pta.mom(df['close'], length=12)\n",
+        "\n",
+        "    bb = BollingerBands(close=df['close'], window=20, window_dev=2)\n",
+        "    df['bb_upper'] = bb.bollinger_hband()\n",
+        "    df['bb_lower'] = bb.bollinger_lband()\n",
+        "    df['bb_pctb']  = bb.bollinger_pband()\n",
+        "    # try:\n",
+        "    #     bb = pta.bbands(df['close'], length=20, std=2)\n",
+        "    #     df['bb_upper'] = bb['BBU_20_2.0_2.0']\n",
+        "    #     df['bb_lower'] = bb['BBL_20_2.0_2.0']\n",
+        "    #     df['bb_pctb']  = bb['BBP_20_2.0_2.0']\n",
+        "    # except:\n",
+        "    #     df['bb_upper'] = df['bb_lower'] = df['bb_pctb'] = float('nan')\n",
         "\n",
         "    df.fillna(0, inplace=True)\n",
         "    return df\n"
