--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwCb5GduTCzkklI90ry+PP",
+      "authorship_tag": "ABX9TyMlbs/fxEB5EO3MLcCLL3n/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/4L3M4R/intraday/blob/main/indradia.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/4L3M4R/cerbero/blob/main/cerbero.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -271,6 +271,8 @@
         "    df['range_pct'] = (df['high'] - df['low']) / df['low'] * 100\n",
         "    df['volume_change_pct'] = (df['volume'] - df['volume'].shift(1)) / df['volume'].shift(1) * 100\n",
         "\n",
+        "\n",
+        "    print(f\"[DEBUG]rows for ATR (len={len(df)})\")\n",
         "    # TA indicators using `ta` library\n",
         "    df['rsi_14'] = RSIIndicator(close=df['close'], window=14).rsi()\n",
         "    # df['rsi_14'] = pta.rsi(df['close'], length=14)  # pandas_ta version\n",
