--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlbs/fxEB5EO3MLcCLL3n/",
+      "authorship_tag": "ABX9TyNmDe+oCGUUqwuPcb3aVj/O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,13 +148,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Leer lista de activos y fuentes ---\n",
+        "# --- Leer lista de activos, fuente y nombre de búsqueda ---\n",
+        "activos = {}\n",
         "with open(\"activos.txt\", \"r\") as f:\n",
-        "    activos = {}\n",
         "    for line in f:\n",
-        "        if \":\" in line:\n",
-        "            symbol, source = line.strip().split(\":\")\n",
-        "            activos[symbol.strip()] = source.strip().lower()\n",
+        "        symbol, source, search_name = line.strip().split(\":\")\n",
+        "        activos[symbol.strip()] = {\n",
+        "            \"source\": source.strip().lower(),\n",
+        "            \"search_name\": search_name.strip()\n",
+        "        }\n",
         "\n",
         "# --- Leer configuración ---\n",
         "config = {}\n",
@@ -401,17 +403,10 @@
         "\n",
         "\n",
         "# --- Noticias para criptos desde CoinTelegraph RSS ---\n",
-        "def get_crypto_news_cointelegraph(symbol, max_news=50):\n",
-        "    symbol_map = {\n",
-        "        \"BTCUSDT\": \"bitcoin\",\n",
-        "        \"ETHUSDT\": \"ethereum\",\n",
-        "    }\n",
-        "    tag = symbol_map.get(symbol.upper())\n",
-        "    if not tag:\n",
-        "        print(f\"⚠️ No se encontró tag para {symbol}\")\n",
-        "        return pd.DataFrame()\n",
         "\n",
-        "    url = f\"https://cointelegraph.com/rss/tag/{tag}\"\n",
+        "\n",
+        "def get_crypto_news_cointelegraph(search_name, max_news=50):\n",
+        "    url = f\"https://cointelegraph.com/rss/tag/{search_name.lower()}\"\n",
         "    feed = feedparser.parse(url)\n",
         "    news_list = []\n",
         "    for entry in feed.entries[:max_news]:\n",
@@ -430,11 +425,12 @@
         "        })\n",
         "    return pd.DataFrame(news_list)\n",
         "\n",
-        "def agregar_sentiment_diario(df, symbol, source):\n",
+        "\n",
+        "def agregar_sentiment_diario(df, symbol, source, search_name):\n",
         "    if source == \"yfinance\":\n",
-        "        news_df = get_news_dataframe(symbol, max_news=100)\n",
+        "        news_df = get_news_dataframe(symbol, max_news=100)  # usa ticker\n",
         "    elif source == \"bitget\":\n",
-        "        news_df = get_crypto_news_cointelegraph(symbol, max_news=100)\n",
+        "        news_df = get_crypto_news_cointelegraph(search_name, max_news=100)\n",
         "    else:\n",
         "        news_df = pd.DataFrame()\n",
         "\n",
@@ -473,10 +469,10 @@
         "    df[\"sentiment_ratio\"] = df[\"finbert\"] / (abs(df[\"vader\"]) + epsilon)\n",
         "    df[\"sentiment_combined\"] = 0.7 * df[\"finbert\"] + 0.3 * df[\"vader\"]\n",
         "\n",
-        "    # Limpiar\n",
         "    df.drop(columns=[\"date_only\"], inplace=True)\n",
         "\n",
         "    return df\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -533,7 +529,7 @@
         "    return df_to_add\n",
         "\n",
         "# --- Función principal para procesar un activo ---\n",
-        "def procesar_activo(symbol, source, granularity, period, limit):\n",
+        "def procesar_activo(symbol, source, search_name, granularity, period, limit):\n",
         "    df_existing, existing_dates = cargar_df_existente(symbol)\n",
         "    df_new = descargar_datos(symbol, source, granularity, period, limit)\n",
         "    if df_new is None or df_new.empty:\n",
@@ -544,7 +540,7 @@
         "        print(f\"No hay nuevas fechas para {symbol}\")\n",
         "        return\n",
         "    df_to_add = calcular_features(df_to_add)\n",
-        "    df_to_add = agregar_sentiment_diario(df_to_add, symbol, source)\n",
+        "    df_to_add = agregar_sentiment_diario(df_to_add, symbol, source, search_name)\n",
         "    df_final = pd.concat([df_existing, df_to_add], ignore_index=True) if not df_existing.empty else df_to_add\n",
         "    save_df(df_final, symbol)\n",
         "\n"
@@ -559,8 +555,8 @@
       "cell_type": "code",
       "source": [
         "# --- Loop principal ---\n",
-        "for symbol, source in activos.items():\n",
-        "    procesar_activo(symbol, source, granularity, period, limit)"
+        "for symbol, source, search_name in activos.items():\n",
+        "    procesar_activo(symbol, source, search_name, granularity, period, limit)"
       ],
       "metadata": {
         "id": "WnnaquAW9KxM",
