--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmDe+oCGUUqwuPcb3aVj/O",
+      "authorship_tag": "ABX9TyOJxh4qSk3oxdxuO0RkAG4n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -555,7 +555,9 @@
       "cell_type": "code",
       "source": [
         "# --- Loop principal ---\n",
-        "for symbol, source, search_name in activos.items():\n",
+        "for symbol, info in activos.items():\n",
+        "    source = info[\"source\"]\n",
+        "    search_name = info[\"search_name\"]\n",
         "    procesar_activo(symbol, source, search_name, granularity, period, limit)"
       ],
       "metadata": {
