--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUNTJ0Nr9RD46Qx8JceBvy",
+      "authorship_tag": "ABX9TyPEkQPiEDLukeEDsRVE0IVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1498,7 +1498,7 @@
         }
       ],
       "source": [
-        "!pip install ta yfinance vaderSentiment transformers torch feedparser"
+        "#!pip install ta yfinance vaderSentiment transformers torch feedparser"
       ]
     },
     {
@@ -2027,7 +2027,7 @@
         "outputId": "dc072cdd-0368-4b3a-d55d-d90e52582cf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 621,
+          "height": 1000,
           "referenced_widgets": [
             "e90dc7ef91c44cecb776b7786c187c90",
             "b529df2583fa4b44876d88399d797281",
@@ -2100,6 +2100,357 @@
             "Error Bitget MATICUSDT: {\"code\":\"40309\",\"msg\":\"The symbol has been removed\",\"requestTime\":1760622277220,\"data\":null}\n",
             "No se descargaron datos para MATICUSDT\n",
             "Descargando desde Bitget: LTCUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en LTCUSDT_datos.txt\n",
+            "Descargando desde Bitget: LINKUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en LINKUSDT_datos.txt\n",
+            "Descargando desde Bitget: UNIUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en UNIUSDT_datos.txt\n",
+            "Descargando desde Bitget: ATOMUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en ATOMUSDT_datos.txt\n",
+            "Descargando desde Bitget: ALGOUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en ALGOUSDT_datos.txt\n",
+            "Descargando desde Bitget: FILUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en FILUSDT_datos.txt\n",
+            "Descargando desde Bitget: TRXUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en TRXUSDT_datos.txt\n",
+            "Descargando desde Bitget: ETCUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en ETCUSDT_datos.txt\n",
+            "Descargando desde Bitget: ICPUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en ICPUSDT_datos.txt\n",
+            "Descargando desde Bitget: VETUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en VETUSDT_datos.txt\n",
+            "Descargando desde Bitget: SHIBUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en SHIBUSDT_datos.txt\n",
+            "Descargando desde Bitget: FTMUSDT...\n",
+            "Error Bitget FTMUSDT: {\"code\":\"40309\",\"msg\":\"The symbol has been removed\",\"requestTime\":1760622477961,\"data\":null}\n",
+            "No se descargaron datos para FTMUSDT\n",
+            "Descargando desde Bitget: EGLDUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en EGLDUSDT_datos.txt\n",
+            "Descargando desde Bitget: THETAUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en THETAUSDT_datos.txt\n",
+            "Descargando desde Bitget: XTZUSDT...\n",
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en XTZUSDT_datos.txt\n",
+            "Descargando desde Yahoo Finance: AAPL...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=89)\n",
+            "Guardado en AAPL_datos.txt\n",
+            "Descargando desde Yahoo Finance: MSFT...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en MSFT_datos.txt\n",
+            "Descargando desde Yahoo Finance: GOOGL...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en GOOGL_datos.txt\n",
+            "Descargando desde Yahoo Finance: AMZN...\n",
+            "[DEBUG]rows for ATR (len=89)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en AMZN_datos.txt\n",
+            "Descargando desde Yahoo Finance: TSLA...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "\r[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en TSLA_datos.txt\n",
+            "Descargando desde Yahoo Finance: META...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en META_datos.txt\n",
+            "Descargando desde Yahoo Finance: NVDA...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en NVDA_datos.txt\n",
+            "Descargando desde Yahoo Finance: NFLX...\n",
+            "[DEBUG]rows for ATR (len=90)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en NFLX_datos.txt\n",
+            "Descargando desde Yahoo Finance: ORCL...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en ORCL_datos.txt\n",
+            "Descargando desde Yahoo Finance: IBM...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en IBM_datos.txt\n",
+            "Descargando desde Yahoo Finance: INTC...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en INTC_datos.txt\n",
+            "Descargando desde Yahoo Finance: ADBE...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en ADBE_datos.txt\n",
+            "Descargando desde Yahoo Finance: CRM...\n",
+            "[DEBUG]rows for ATR (len=90)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guardado en CRM_datos.txt\n",
+            "Descargando desde Yahoo Finance: PYPL...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[DEBUG]rows for ATR (len=90)\n",
+            "Guardado en PYPL_datos.txt\n",
+            "Descargando desde Yahoo Finance: QCOM...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2476038989.py:29: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+            "  data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+            "[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "[DEBUG]rows for ATR (len=90)\n"
           ]
         }
