--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPSzLQhbPMpkJSvG724Z0B",
+      "authorship_tag": "ABX9TyPOAYLaFlMKtcIUuEXjaTZZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1608,35 +1608,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Calculo de indicadores ---\n",
-        "def calcular_features(df):\n",
-        "    for col in ['open','high','low','close','volume']:\n",
-        "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+        "# ===============================================\n",
+        "#             2. FUNCIONES UTILES\n",
+        "# ===============================================\n",
         "\n",
-        "    df['gap_apertura_pct'] = (df['open'] - df['close'].shift(1)) / df['close'].shift(1) * 100\n",
-        "    df['volatilidad_diaria'] = (df['high'] - df['low']) / df['low'] * 100\n",
-        "    df['vol_5d'] = df['volatilidad_diaria'].rolling(5).std()\n",
-        "    df['vol_10d'] = df['volatilidad_diaria'].rolling(10).std()\n",
-        "    df['vol_rel_5d'] = df['volume'] / df['volume'].rolling(5).mean()\n",
-        "    df['return_pct'] = (df['close'] - df['close'].shift(1)) / df['close'].shift(1) * 100\n",
-        "    df['close_open_pct'] = (df['close'] - df['open']) / df['open'] * 100\n",
-        "    df['range_pct'] = (df['high'] - df['low']) / df['low'] * 100\n",
-        "    df['volume_change_pct'] = (df['volume'] - df['volume'].shift(1)) / df['volume'].shift(1) * 100\n",
+        "# --- Descargar datos ---\n",
+        "def descargar_datos_bitget(symbol, granularity, limit):\n",
+        "    url = \"https://api.bitget.com/api/v2/mix/market/history-candles\"\n",
+        "    params = {\"symbol\": symbol, \"productType\": \"USDT-FUTURES\", \"granularity\": granularity, \"limit\": limit}\n",
+        "    print(f\"Descargando desde Bitget: {symbol}...\")\n",
+        "    response = requests.get(url, params=params)\n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Error Bitget {symbol}: {response.text}\")\n",
+        "        return None\n",
+        "    data = response.json().get(\"data\", [])\n",
+        "    if not data:\n",
+        "        print(f\"No hay datos para {symbol}\")\n",
+        "        return None\n",
+        "    df = pd.DataFrame(data, columns=[\"timestamp\", \"open\", \"high\", \"low\", \"close\", \"volume\", \"quoteVolume\"])\n",
+        "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"].astype(int), unit='ms', utc=True)\n",
+        "    df[\"symbol\"] = symbol\n",
+        "    return df.sort_values(\"timestamp\")\n",
         "\n",
-        "    print(f\"[DEBUG] Filas antes de indicadores: {len(df)}\")\n",
-        "    df['rsi_14'] = RSIIndicator(close=df['close'], window=14).rsi()\n",
-        "    macd = MACD(close=df['close'], window_slow=26, window_fast=12, window_sign=9)\n",
-        "    df['macd'] = macd.macd()\n",
-        "    df['macd_signal'] = macd.macd_signal()\n",
-        "    df['macd_diff'] = macd.macd_diff()\n",
-        "    df['atr_14'] = AverageTrueRange(high=df['high'], low=df['low'], close=df['close'], window=14).average_true_range()\n",
-        "    df['momentum_12'] = ROCIndicator(close=df['close'], window=12).roc()\n",
-        "    bb = BollingerBands(close=df['close'], window=20, window_dev=2)\n",
-        "    df['bb_upper'] = bb.bollinger_hband()\n",
-        "    df['bb_lower'] = bb.bollinger_lband()\n",
-        "    df['bb_pctb'] = bb.bollinger_pband()\n",
-        "    df.fillna(0, inplace=True)\n",
-        "    return df\n"
+        "def descargar_datos_yf(symbol, interval, period, limit):\n",
+        "    print(f\"Descargando desde Yahoo Finance: {symbol}...\")\n",
+        "    data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+        "    if data.empty:\n",
+        "        print(f\"No se encontraron datos para {symbol}\")\n",
+        "        return None\n",
+        "    if isinstance(data.columns, pd.MultiIndex):\n",
+        "        data.columns = [col[0].lower() for col in data.columns]\n",
+        "    else:\n",
+        "        data.columns = [col.lower() for col in data.columns]\n",
+        "    data = data.reset_index()\n",
+        "    rename_map = {'open':'open','high':'high','low':'low','close':'close','volume':'volume','Date':'timestamp'}\n",
+        "    data.rename(columns=rename_map, inplace=True)\n",
+        "    data[\"symbol\"] = symbol\n",
+        "    return data.head(limit)\n"
       ],
       "metadata": {
         "id": "9LuPAE-pnS8g"
