--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOAYLaFlMKtcIUuEXjaTZZ",
+      "authorship_tag": "ABX9TyMqYDVKSxoBZwMyWJdriIRM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1694,20 +1694,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Función principal para procesar activos ---\n",
         "def procesar_activo(symbol, source, search_name, granularity, period, limit):\n",
         "    df_existing, existing_dates = cargar_df_existente(symbol)\n",
         "    df_new = descargar_datos_bitget(symbol, granularity, limit) if source==\"bitget\" else descargar_datos_yf(symbol, granularity, period, limit)\n",
+        "\n",
         "    if df_new is None or df_new.empty:\n",
         "        print(f\"No se descargaron datos para {symbol}\")\n",
         "        return\n",
+        "\n",
         "    df_to_add = filtrar_nuevas_fechas(df_new, existing_dates)\n",
         "    if df_to_add.empty:\n",
         "        print(f\"No hay nuevas fechas para {symbol}\")\n",
         "        return\n",
-        "    df_to_add = calcular_features(df_to_add)\n",
+        "\n",
+        "    # 🔹 Primero concatenamos el histórico y el nuevo delta\n",
         "    df_final = pd.concat([df_existing, df_to_add], ignore_index=True) if not df_existing.empty else df_to_add\n",
-        "    save_df(df_final, symbol)\n"
+        "\n",
+        "    # 🔹 Ahora sí calculamos los indicadores sobre todo el histórico actualizado\n",
+        "    df_final = calcular_features(df_final)\n",
+        "\n",
+        "    # 🔹 Guardamos\n",
+        "    save_df(df_final, symbol)"
       ],
       "metadata": {
         "colab": {
