--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2dwjmOu1U3ilrdTQuOXyV",
+      "authorship_tag": "ABX9TyOEoGzttXfnNoFqD42yzQrN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1386,6 +1386,7 @@
         "        return\n",
         "\n",
         "    # 🔹 Guardar las filas que efectivamente se agregarán\n",
+        "    os.makedirs(\"logs\", exist_ok=True)\n",
         "    df_to_add[\"added_date\"] = pd.Timestamp.utcnow()\n",
         "    df_to_add.to_csv(f\"logs/{symbol}_nuevas_agregadas_{pd.Timestamp.utcnow().date()}.csv\", index=False)\n",
         "\n",
@@ -1399,6 +1400,7 @@
         "    save_df(df_final, symbol)\n",
         "\n",
         "    # 🔹 Log resumen\n",
+        "\n",
         "    registrar_log(f\"{symbol} - Descargadas {len(df_new)} filas, agregadas {len(df_to_add)} filas, total histórico {len(df_final)}\")\n"
       ],
       "metadata": {
