--- a/cerbero.ipynb
+++ b/cerbero.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPq5TsD0tKcN+m0NAsBBKM",
+      "authorship_tag": "ABX9TyOLE1FxZdqUhgKJLM+jyGsc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1238,7 +1238,10 @@
         "    filename = f\"{symbol}_datos.txt\"\n",
         "    if os.path.exists(filename):\n",
         "        df = pd.read_csv(filename, sep=\"\\t\")\n",
-        "        df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], utc=True, errors=\"coerce\")\n",
+        "        # Convertir timestamp correctamente\n",
+        "        df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
+        "        # Aseguramos normalización sin zona horaria\n",
+        "        df[\"timestamp\"] = df[\"timestamp\"].dt.tz_localize(None)\n",
         "        existing_dates = set(df[\"timestamp\"].dt.date)\n",
         "    else:\n",
         "        df = pd.DataFrame()\n",
@@ -1246,10 +1249,19 @@
         "    return df, existing_dates\n",
         "\n",
         "def filtrar_nuevas_fechas(df_new, existing_dates):\n",
-        "    df_new[\"timestamp\"] = pd.to_datetime(df_new[\"timestamp\"], utc=True)\n",
+        "    # Normalizar timestamps (sin zona horaria)\n",
+        "    df_new[\"timestamp\"] = pd.to_datetime(df_new[\"timestamp\"], errors=\"coerce\")\n",
+        "    df_new[\"timestamp\"] = df_new[\"timestamp\"].dt.tz_localize(None)\n",
+        "\n",
+        "    # Extraer solo la fecha para comparar\n",
         "    df_new[\"date_only\"] = df_new[\"timestamp\"].dt.date\n",
+        "\n",
+        "    # Filtrar las fechas nuevas\n",
         "    df_to_add = df_new[~df_new[\"date_only\"].isin(existing_dates)].copy()\n",
-        "    df_to_add.drop(columns=[\"date_only\"], inplace=True)\n",
+        "\n",
+        "    # Limpiar columna auxiliar\n",
+        "    df_to_add.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
+        "\n",
         "    return df_to_add\n",
         "\n",
         "def save_df(df, symbol):\n",
@@ -1377,6 +1389,8 @@
         "    # 🔹 Guardar todas las filas descargadas ese día\n",
         "    df_new[\"download_date\"] = pd.Timestamp.utcnow()\n",
         "    df_new.to_csv(f\"logs/{symbol}_descargadas_{pd.Timestamp.utcnow().date()}.csv\", index=False)\n",
+        "\n",
+        "\n",
         "\n",
         "    # 🔹 Filtrar solo las filas nuevas respecto al histórico\n",
         "    df_to_add = filtrar_nuevas_fechas(df_new, existing_dates)\n",
