--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHLk6+DwWKINmw5a4/qUjk",
+      "authorship_tag": "ABX9TyMCzMmLFPQr1n2KG1chNIPw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/4L3M4R/cerbero/blob/main/cerbero_pre.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/4L3M4R/cerbero/blob/main/cerbero-pre.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,6 +47,7 @@
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
         "import torch\n",
         "import datetime\n",
+        "from urllib.parse import quote\n",
         "\n",
         "# ===============================================\n",
         "#             CONFIGURACIÓN\n",
@@ -79,7 +80,9 @@
         "\n",
         "def descargar_noticias_y_calcular_sentiment(symbol, search_name):\n",
         "    os.makedirs(\"logs\", exist_ok=True)\n",
-        "    feed = feedparser.parse(f\"https://news.google.com/rss/search?q={search_name}\")\n",
+        "\n",
+        "    query = quote(search_name)\n",
+        "    feed = feedparser.parse(f\"https://news.google.com/rss/search?q={query}\")\n",
         "    noticias = []\n",
         "    for entry in feed.entries:\n",
         "        noticias.append({\n",
