--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCzMmLFPQr1n2KG1chNIPw",
+      "authorship_tag": "ABX9TyOxhte78DueP6xLwsOWmxBG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,8 +98,44 @@
         "    df[\"vader_sentiment\"] = df[\"title\"].apply(lambda x: vader_analyzer.polarity_scores(x)[\"compound\"])\n",
         "    df[\"finbert_sentiment\"] = 0  # Placeholder, puedes calcular FinBERT aquí si quieres\n",
         "\n",
+        "    # Calcula promedio de Vader\n",
+        "    vader_promedio = df[\"vader_sentiment\"].mean()\n",
+        "    finbert_promedio = df[\"finbert_sentiment\"].mean()\n",
+        "\n",
+        "    # Actualiza _datos.txt\n",
+        "    actualizar_sentimiento(symbol, vader_promedio, finbert_promedio)\n",
+        "\n",
         "    df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{pd.Timestamp.utcnow().date()}.csv\", index=False)\n",
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
+        "\n",
+        "\n",
+        "def actualizar_sentimiento(symbol, vader, finbert=0):\n",
+        "    import os\n",
+        "    hoy = pd.Timestamp.utcnow().date().strftime(\"%Y-%m-%d\")\n",
+        "    filename = f\"{symbol}_datos.txt\"\n",
+        "\n",
+        "    if not os.path.exists(filename):\n",
+        "        # Si el archivo no existe, crearlo con solo la columna sentiment\n",
+        "        with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
+        "            f.write(f\"timestamp,vader_sentiment,finbert_sentiment\\n\")\n",
+        "            f.write(f\"{hoy},{vader},{finbert}\\n\")\n",
+        "        return\n",
+        "\n",
+        "    # Leer archivo existente\n",
+        "    df = pd.read_csv(filename, sep=\"\\t\")\n",
+        "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\").dt.date\n",
+        "\n",
+        "    # Si ya hay línea de hoy, actualizar\n",
+        "    if hoy in df[\"timestamp\"].astype(str).values:\n",
+        "        df.loc[df[\"timestamp\"] == pd.to_datetime(hoy).date(), \"vader_sentiment\"] = vader\n",
+        "        df.loc[df[\"timestamp\"] == pd.to_datetime(hoy).date(), \"finbert_sentiment\"] = finbert\n",
+        "    else:\n",
+        "        # Si no hay línea de hoy, agregar\n",
+        "        nueva = {\"timestamp\": hoy, \"vader_sentiment\": vader, \"finbert_sentiment\": finbert}\n",
+        "        df = pd.concat([df, pd.DataFrame([nueva])], ignore_index=True)\n",
+        "\n",
+        "    df.to_csv(filename, sep=\"\\t\", index=False)\n",
+        "    registrar_log(f\"{symbol} - Sentiment actualizado: Vader={vader}, FinBERT={finbert}\")\n",
         "\n",
         "# ===============================================\n",
         "#           EJECUCIÓN PRINCIPAL\n",
